[tool.poetry]
name = "yufuquantsdk"
version = "0.1.1"
description = "SDK for yufuquant development."
license = "MIT"
readme = "README.md"
repository = "https://github.com/yufuquant/yufuquant-sdk"
authors = ["zmrenwu <zmrenwu@163.com>"]
packages = [
    { include = "yufuquantsdk" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
httpx = "^0.14.2"
websockets = "^8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
